change order function

--- a/sample/bcsquants.ipynb
+++ b/sample/bcsquants.ipynb
@@ -281,10 +281,10 @@
     "    currentPrice = data['close'][1] # последняя цена\n",
     "\n",
     "    if currentPrice >= (1 + self.alpha) * predPrice:\n",
-    "        backtest.order('buy', takeProfit=self.alpha, stopLoss=self.alpha, holdPeriod=self.holdPeriod)\n",
+    "        order('buy', takeProfit=self.alpha, stopLoss=self.alpha, holdPeriod=self.holdPeriod)\n",
     "\n",
     "    if currentPrice <= (1 - self.alpha) * predPrice:\n",
-    "        backtest.order('sell', takeProfit=self.alpha, stopLoss=self.alpha, holdPeriod=self.holdPeriod)\n",
+    "        order('sell', takeProfit=self.alpha, stopLoss=self.alpha, holdPeriod=self.holdPeriod)\n",
     "        \n",
     "###############################################################################################\n",
     "# Вставьте стратегию выше, смотри примеры https://bcsquants.com/doc/example\n",
